--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
@@ -39,8 +39,9 @@
             android:layout_alignParentBottom="true"
             android:shadowColor="@color/white"
             app:itemBackground="@color/blue_title_bg"
+            app:itemIconSize="16dp"
             app:itemRippleColor="@color/white"
-            app:itemTextColor="@color/white"
+            app:itemTextColor="@drawable/wanandroid_selector_bnv_title_color"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
