--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_fragment_home.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_fragment_home.xml
@@ -4,24 +4,40 @@
 
     <data />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <WebView
-            android:id="@+id/wv_home"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
 
-        <ProgressBar
-            android:id="@+id/pb_home"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:max="100"
-            android:progressDrawable="@drawable/wanandroid_layer_pb_blog_home"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/bt_jump2_blog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_home_banner"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toBottomOf="@+id/bt_jump2_blog" />
+
+            <TextView
+                android:id="@+id/tv_top_article"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="置顶文章"
+                app:layout_constraintTop_toBottomOf="@+id/vp_home_banner" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_top_article"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tv_top_article" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
