--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
@@ -17,7 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.viewpager.widget.ViewPager
+        <cc.catface.ctool.view.viewpager.NoScrollViewPager
             android:id="@+id/vp_wanandroid_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
