--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_fragment_home.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_fragment_home.xml
@@ -25,6 +25,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/bt_jump2_blog" />
 
             <TextView
+                android:id="@+id/tv_banner_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintBottom_toBottomOf="@id/vp_home_banner"
+                app:layout_constraintStart_toStartOf="@+id/vp_home_banner" />
+
+            <TextView
                 android:id="@+id/tv_top_article"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
