--- a/module_apis/src/main/res/layout/apis_item_memo_item.xml
+++ b/module_apis/src/main/res/layout/apis_item_memo_item.xml
@@ -18,7 +18,7 @@
         android:textSize="12sp"/>
 
 
-    <cc.catface.base.utils.android.view.simple.BarTextView
+    <cc.catface.ctool.view.textview.BarTextView
         android:id="@+id/tv_content"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
