--- a/module_api/src/main/res/layout/api_fm_toast.xml
+++ b/module_api/src/main/res/layout/api_fm_toast.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_toast"
-        style="@style/scrollbar_scroll_bar_style_default"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_toast"
+            style="@style/scrollbar_scroll_bar_style_default"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <EditText
+            android:id="@+id/etPeriod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="请输入period"
+            app:layout_constraintBottom_toBottomOf="@id/rv_toast"
+            app:layout_constraintEnd_toEndOf="@+id/rv_toast" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
