--- a/catface_base/src/main/res/values/colors.xml
+++ b/catface_base/src/main/res/values/colors.xml
@@ -5,13 +5,19 @@
     <color name="black">#000</color>
     <color name="white">#fff</color>
     <color name="red">#f00</color>
+    <color name="green">#0f0</color>
     <color name="blue">#00f</color>
+    <color name="yellow">#ff0</color>
+    <color name="pink">#f0f</color>
+    <color name="cyan">#0ff</color>
+
     <color name="c_a">#aaa</color>
     <color name="c_10">#1000</color>
 
 
     <!-- data:basetabapp基础颜色 -->
     <color name="blue_title_bg">#1A7DEB</color>
+    <color name="blue_title_bg_alpha">#111A7DEB</color>
     <color name="setting_gap">#F0EEF4</color>
 
     <color name="colorPrimary">#3F51B5</color>
