--- a/module_start/src/main/res/layout/fm_music_main.xml
+++ b/module_start/src/main/res/layout/fm_music_main.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/bt_scan"
-            android:layout_width="match_parent"
+            android:id="@+id/btScan"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="加载本地歌曲" />
+            android:text="扫描歌曲"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-
-        <Button
-            android:id="@+id/bt_play"
+        <ListView
+            android:id="@+id/lvSongs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="播放" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btScan" />
 
-        <ProgressBar
-            android:id="@+id/pb"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
