--- a/module_pj_showapi/src/main/res/layout/showapi_activity_showapi_main.xml
+++ b/module_pj_showapi/src/main/res/layout/showapi_activity_showapi_main.xml
@@ -6,13 +6,24 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@drawable/showapi_bg_home">
 
-        <Button
-            android:id="@+id/bt_to_joke"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv2Joke"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#3ff0"
+            android:padding="30dp"
             android:text="joke"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:transitionName="tnTvTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
