--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_projects_list.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_projects_list.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <cc.catface.ctool.view.textview.BarTextView
                 android:id="@+id/tv_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
