--- a/module_pj_showapi/src/main/res/layout/showapi_item_yy_joke_341_2.xml
+++ b/module_pj_showapi/src/main/res/layout/showapi_item_yy_joke_341_2.xml
@@ -6,14 +6,16 @@
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="0.75dp"
+        android:layout_marginBottom="1dp"
         app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="2dp">
 
             <ImageView
                 android:id="@+id/iv_joke_pic"
@@ -26,6 +28,7 @@
                 android:id="@+id/tv_joke_pic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
                 android:text="我是图片的标题" />
 
             <View
