--- a/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
+++ b/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="40dp">
 
         <Button
             android:id="@+id/bt_start_aiui"
