--- a/module_api/src/main/res/layout/api_activity_room.xml
+++ b/module_api/src/main/res/layout/api_activity_room.xml
@@ -21,61 +21,68 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="查(所有)"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_update" />
+                android:text="查all"
+                android:textAllCaps="false" />
 
             <Button
                 android:id="@+id/bt_query_odd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="查(id为奇数)"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_query_all" />
+                android:text="奇id"
+                android:textAllCaps="false" />
 
             <Button
                 android:id="@+id/bt_query_desc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="查(id倒序)"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_query_odd" />
+                android:text="倒id"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/bt_query_xx_first"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="和谐倒age"
+                android:textAllCaps="false" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/bt_insert"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/ll_normal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="增"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll_query" />
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/ll_query">
 
-        <Button
-            android:id="@+id/bt_delete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="删"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt_insert" />
+            <Button
+                android:id="@+id/bt_insert"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="增" />
 
+            <Button
+                android:id="@+id/bt_delete"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="删all"
+                android:textAllCaps="false" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvRoom"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt_delete" />
+            app:layout_constraintTop_toBottomOf="@+id/ll_normal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
