--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
@@ -7,8 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".module.WanandroidMainActivity">
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/i_tb_wanandroid"
